# regex_for_lunch

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
regexlibrary/: README.md  __init__.py  core.py
test_data/: .gitkeep  input_tcrs.csv
tests/: test_core.py  test_input_tcrs.py
