[project]
name = "regexlibrary"
version = "0.1.0"
description = "A Python package for regex utilities."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
